--- a/src/components/common/project/project.module.scss
+++ b/src/components/common/project/project.module.scss
@@ -4,15 +4,20 @@
       font-weight: bold;
     }
     .content {
-      margin-left: 16px;
       color: #333333;
     }
+    span.content {
+      margin-left: 1em;
+    }
+    div.content {
+      margin-left: 2em;
+    }
     ol.content {
-      margin-left: 30px;
+      margin-left: 3em;
     }
     .project-name {
       font-weight: bold;
-      font-size: 16px;
+      font-size: 18px;
     }
     .technology-stack {
       display: flex;
