--- a/src/index.scss
+++ b/src/index.scss
@@ -70,7 +70,7 @@ a {
   }
 }
 
-main {
+article {
   position: relative;
   border-radius: 5px;
   background-color: #fff;
@@ -79,7 +79,7 @@ main {
     border-radius: 0;
   }
 }
-article {
+article > .body {
   width: 100%;
   min-height: 200px;
   padding: 10px 30px 20px;
@@ -87,7 +87,7 @@ article {
   @media screen and (max-width: 720px) {
     padding: 20px 20px 50px;
   }
-  section {
+  > section {
     overflow: hidden;
     padding: 5px 0;
   }
