--- a/src/components/common/project/project.module.scss
+++ b/src/components/common/project/project.module.scss
@@ -5,16 +5,26 @@
     }
     span.content {
       margin-left: 1em;
+      > p {
+        display: inline;
+      }
     }
     div.content {
       margin-left: 2em;
     }
     ol.content {
-      margin-left: 3em;
+      margin-left: 2em;
     }
     .project-name {
       font-weight: bold;
       font-size: 18px;
+    }
+    .desc {
+      //color: var(--text-color-3);
+    }
+    .time {
+      color: var(--text-color-3);
+      font-size: var(--font-size-light);
     }
     .technology-stack {
       display: flex;
@@ -24,11 +34,6 @@
     }
     .item-bd {
       margin-top: 6px;
-    }
-    .project-desc {
-      ol {
-        list-style: decimal;
-      }
     }
   }
 }
