--- a/src/components/experience/project/project.module.scss
+++ b/src/components/experience/project/project.module.scss
@@ -1,7 +1,9 @@
 .project-list {
-  list-style: square;
-  padding: 0 16px;
-}
-.project {
-  margin-bottom: 20px;
+  //list-style: square;
+  //padding: 0 16px;
+  > li {
+    + li {
+      margin-top: 20px;
+    }
+  }
 }
