--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @use 'sass:color' as Col;
+// @import "resetcss";
 
 // 生成色阶 css 变量
 @mixin colorScale($name, $color, $step: 25%, $len: 5) {
@@ -9,9 +10,15 @@
   }
 }
 
+
 :root {
   @include colorScale(theme-color, #00b38a, $step: 10%);
   @include colorScale(text-color, #333, calc(1 / 9 * 100%), 10);
+  --font-size-light: 14px;
+  --font-size-middle: 16px;
+  --font-size-large: 18px;
+  --font-size-title: 52px;
+  --font-size-title-light: 24px;
   --border-color: var(--text-color-9);
   --font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft YaHei',
     sans-serif;
@@ -20,21 +27,19 @@
   box-sizing: border-box;
 }
 li {
-  margin: 6px 0;
+  margin: 6px 0 6px 1.2em;
 }
 body {
   color: var(--text-color);
-  font-size: 16px;
+  font-size: var(--font-size-middle);
   line-height: 1.5;
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   background-color: var(--text-color-9);
   overflow: auto;
-  padding-top: 5px;
-  @media screen and (max-width: 1024px) {
-    padding-top: 0;
-  }
+  margin: 0;
+  padding: 1px 0 0;
   @media print {
     background-color: white;
   }
@@ -51,7 +56,8 @@ body {
   }
 }
 .pre-line {
-  white-space: pre-line;
+  word-break: break-word;
+  //white-space: pre-line;
 }
 a {
   text-decoration: none;
@@ -104,5 +110,30 @@ article > .body {
   transition: all 0.2s;
   &:hover {
     color: var(--theme-color-3);
+  }
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  font: inherit;
+}
+p {
+  margin: 0;
+}
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+.clear-list-style {
+  margin: 0;
+  padding: 0;
+  &,
+  > li {
+    margin-left: 0;
+    list-style: none;
   }
 }
