--- a/src/components/common/project/project.module.scss
+++ b/src/components/common/project/project.module.scss
@@ -22,6 +22,9 @@
     .desc {
       //color: var(--text-color-3);
     }
+    .line {
+      margin: 0 5px;
+    }
     .time {
       color: var(--text-color-3);
       font-size: var(--font-size-light);
